Update and rename Supervised_Learning_Refined.md to 04. Supervised Learning.md

--- a/notes/Intelligent-interactive-systems/04. Supervised Learning.md
+++ b/notes/Intelligent-interactive-systems/04. Supervised Learning.md
@@ -1,11 +1,6 @@
 # From Supervised Models to Human‑in‑the‑Loop  
 *A practical roadmap for building AI systems that work*
 
-These notes walk you step‑by‑step from the basic idea of “learning from labeled data” to the organisational and ethical questions that come up when you ship models to production.  
-Each section starts with a brief **Why it matters** paragraph so you always know how the pieces fit together.
-
----
-
 ## 1. What is Supervised Learning and Why Should I Care?
 
 **Why it matters**  
@@ -55,23 +50,38 @@ Neural networks come in many shapes. Picking the wrong one is like hammering in 
 - **Pooling** shrinks the data while keeping the strongest signals.  
 - A **fully‑connected head** turns extracted features into the final prediction.
 
+
+**CNN Layers**
+
+<img src="https://i0.wp.com/developersbreach.com/wp-content/uploads/2020/08/cnn_banner.png?fit=1024%2C481&ssl=1" alt="CNN" width="400">
+
+1. **Input Layer** – feeds in a 2‑D grid (e.g., a 28 × 28‑pixel image) **without flattening**, so spatial relationships are preserved.
+2. **Convolution Layer** – slides a **learnable filter** (small matrix) over the image, firing when it detects edges, textures, or other telling patterns. Each filter produces a **feature map**—think of it as a heat‑map of “pattern spotted here.”  
+3. **Pooling Layer** – quickly shrinks each feature map with **Max Pooling** (keeps the strongest signal) or **Average Pooling** (keeps the mean), cutting computation and noise while hanging on to the “essence.” 
+4. **Fully Connected Layer (FC)** – a classic multi‑layer perceptron that fuses all extracted clues and delivers the final verdict (class label or number). 
+
+
 > Use for images, video frames, or even text arranged as a “pixel map”.
 
 ### 3.2 Recurrent Neural Networks (RNNs) — *remembering sequences*
+<img src="https://i0.wp.com/developersbreach.com/wp-content/uploads/2020/08/cnn_banner.png?fit=1024%2C481&ssl=1" alt="RNN" width="400">
 
 - Pass a hidden state from step to step so earlier words influence later ones.  
-- Trained by **Back‑propagation Through Time (BPTT)**.  
+- Trained by **Back‑propagation Through Time (BPTT)**.
+    - **Backpropagation Through Time (BPTT)** – errors ripple backward across all timesteps, fine‑tuning weights for the whole sequence.
 - Watch out for **exploding** or **vanishing** gradients.
+    - **Exploding / Vanishing Gradients** – error signals can blow up or fizzle; mitigation includes gradient clipping (for explosions) and architectural fixes like LSTMs (for fade‑outs). 
+
 
 ### 3.3 Long Short‑Term Memory (LSTM) — *memory with valves*
+**Upgrade path:** An LSTM is an RNN cell re‑engineered with **gates**—tiny regulators that decide what to store, discard, or expose.
 
-Adds gates that decide what to remember, forget, and expose, solving the gradient problems.
+<img src="https://mlarchive.com/wp-content/uploads/2024/04/New-Project-3-1-1024x607-1024x585.png" alt="LSTM" width="400">
 
-| Data type | Go‑to network | Why |
-|---|---|---|
-| Images / video | **CNN** | Exploits spatial locality |
-| Text, speech, sensors | **LSTM / GRU** | Captures long‑range order |
-| Very short, real‑time sequences | **Vanilla RNN** | Lightweight |
+1. **Forget Gate** – tosses irrelevant history (noise filtering).  
+2. **Input Gate** – admits new, valuable info (knowledge intake).  
+3. **Cell State** – the running “tape” of long‑term memory.  
+4. **Output Gate** – releases only what downstream layers need (signal routing).  
 
 ---
 
@@ -87,6 +97,18 @@ Models drift, regulations evolve, and edge cases bite. Human expertise keeps the
 | **Machine Teaching** | Curates a teaching curriculum | Very little data |
 | **Curriculum Learning** | Feeds easy ➜ hard examples | Training is unstable |
 | **Explainable AI** | Reviews model reasoning | Trust or compliance required |
+
+- Active Learning (AL) – *model asks, human answers*
+    - The algorithm queries a labeler only when it’s “uncertain,” slicing annotation budgets while boosting accuracy.
+- Interactive ML (IML) – *pair programming with the model*
+    - Users iteratively correct outputs via a slick interface. Think “Photoshop layers,” but for data.
+- Machine Teaching (MT) – *expert curates the perfect lesson plan*
+    - Humans feed hand‑picked examples or rules; model learns with minimal data—your SME becomes the AI trainer.
+- Curriculum Learning (CL) – *kindergarten to PhD for models*
+    - Order samples from simple → complex to smooth optimization and denoise training.
+- Explainable AI (XAI) – *show your work*
+    - Adds traceable rationales (text, heatmaps) so stakeholders trust, audit, and green‑light deployments.
+
 
 ---
 
@@ -125,7 +147,3 @@ Today’s prototype is tomorrow’s legacy system. Planning ahead saves rewrites
 6. Monitor, retrain, and audit each release.
 
 > **Bottom line:** Great AI blends solid data, the right architecture, and continuous human oversight.
-
----
-
-*Last updated: 10 May 2025*
