Update and rename Improved_Unsupervised_and_LDA_Notes.md to 05. Unsupervised and LDA.md

--- a/notes/Intelligent-interactive-systems/05. Unsupervised and LDA.md
+++ b/notes/Intelligent-interactive-systems/05. Unsupervised and LDA.md
@@ -1,32 +1,18 @@
-# Unsupervised Learning & Topic Modeling – Consolidated Notes
+# Unsupervised Learning & Topic Modeling
 
-## Table of Contents
-1. [Why Unsupervised?](#why-unsupervised)  
-2. [Hard Clustering with K‑means](#hard-clustering-with-k-means)  
-   • Algorithm  
-   • Math Corner  
-   • Choosing K  
-3. [External Cluster Evaluation](#external-cluster-evaluation)  
-4. [From Counts to Topics — Latent Dirichlet Allocation](#from-counts-to-topics--latent-dirichlet-allocation)  
-5. [Inference & Hyperparameter Tuning](#inference--hyperparameter-tuning)  
-6. [Minimal Python Pipeline](#minimal-python-pipeline)  
-7. [Tool Selection Quick Guide](#tool-selection-quick-guide)  
-8. [Common Pitfalls & Remedies](#common-pitfalls--remedies)  
-9. [20‑Second Takeaway](#20-second-takeaway)
-
----
-
-<a name="why-unsupervised"></a>
 ## 1. Why Unsupervised?
 When labels are scarce or subjective, **unsupervised learning** lets the **data distribution itself** reveal structure.
+
+<img src="https://miro.medium.com/v2/resize:fit:1400/1*zKHCMnHzlLGrxgAWY8RDtw.png" alt="clustering" width="400">
+
 
 * **Hard clustering** (e.g., K‑means) – each sample belongs to exactly one cluster.  
 * **Soft / model‑based clustering** (e.g., Gaussian Mixtures, LDA) – samples share fractional membership across latent groups.
 
 ---
 
-<a name="hard-clustering-with-k-means"></a>
 ## 2. Hard Clustering with K‑means
+<img src="https://www.ejable.com/wp-content/uploads/2023/11/Stop-point-for-K-Means-clustering-2.webp" alt="K‑means" width="400">
 
 ### 2.1 Algorithm
 | Step | Action |
@@ -39,70 +25,77 @@ When labels are scarce or subjective, **unsupervised learning** lets the **data 
 ### 2.2 Math Corner
 *Centroid*  
 
-\[
-\mu(\omega) = \frac{1}{|\omega|} \sum_{x \in \omega} x
-\]
+$$\mu(\omega) = \frac{1}{|\omega|} \sum_{x \in \omega} x$$
 
 *Residual Sum of Squares*  
 
-\[
-RSS = \sum_{k=1}^{K} \sum_{x \in \omega_k} \lVert x - \mu(\omega_k) \rVert^2
-\]
+$$RSS = \sum_{k=1}^{K} \sum_{x \in \omega_k} \lVert x - \mu(\omega_k) \rVert^2$$
 
 ### 2.3 Choosing K
 * **Elbow / knee on RSS(K)** – plot RSS vs *K*; pick the first sharp bend.  
 * **Silhouette score**  
 
-\[
-s = \frac{b - a}{\max(a, b)} \quad (-1 \le s \le 1)
-\]  
+$$s = \frac{b - a}{\max(a, b)} \quad (-1 \le s \le 1)$$  
 
 where *a* = average distance to points in the **same** cluster, *b* = average distance to the **nearest other** cluster.
 
 ---
 
-<a name="external-cluster-evaluation"></a>
 ## 3. External Cluster Evaluation
 
 | Metric | Intuition | Formula (summary) |
 |--------|-----------|-------------------|
 | **Purity** | Majority label per cluster | Increases with many tiny clusters |
-| **Homogeneity (h)** | “Each cluster contains one class” | \(h = 1 - \tfrac{H(C\mid K)}{H(C)}\) |
-| **Completeness (c)** | “Members of a class end up in the same cluster” | \(c = 1 - \tfrac{H(K\mid C)}{H(K)}\) |
-| **V‑measure** | Harmonic of *h* & *c* | \(V_\beta = \tfrac{(1+\beta)hc}{\beta h + c}\) |
+| **Homogeneity (h)** | “Each cluster contains one class” | $h = 1 - \tfrac{H(C\mid K)}{H(C)}$ |
+| **Completeness (c)** | “Members of a class end up in the same cluster” | $c = 1 - \tfrac{H(K\mid C)}{H(K)}$ |
+| **V‑measure** | Harmonic mean of *h* & *c* | $V_\beta = \tfrac{(1+\beta)hc}{\beta h + c}$ |
 
 ---
 
-<a name="from-counts-to-topics--latent-dirichlet-allocation"></a>
 ## 4. From Counts to Topics — Latent Dirichlet Allocation (LDA)
+<img src="https://miro.medium.com/v2/resize:fit:850/1*VK5R_2YlRx3NbRIMbUxJ8Q.png" alt="LDA" width="400">
 
-### 4.1 Generative Story
-1. Draw **topic mixture** for the document: \(\theta \sim \text{Dir}(\alpha)\).  
+### 4.1 Why "Topics Analysis" at all?
+Latent Dirichlet Allocation (**LDA — statistical recipe for finding hidden themes**) models documents as blends of underlying *topics* (word-distribution patterns) instead of raw word bags. This cuts noise, reveals structure, and feeds downstream tasks like classification.
+
+### 4.2 From Raw Counts to Smarter Counts
+1. **tf‑idf (term frequency–inverse document frequency — how often a word appears, discounted if it’s everywhere)** turns each document into a vector of weighted counts.  
+2. **Singular Value Decomposition (SVD — matrix‑factoring shortcut that keeps only dominant patterns)** underlies **Latent Semantic Indexing (LSI — early “semantic space” trick)**, projecting the huge *document × word* grid into a compact latent space that loosely captures synonymy/polysemy.
+
+### 4.3 Probabilistic Turn: Comparing Topic Models
+
+| Model | Plain‑English Pitch | Advantages | Limitations |
+|-------|--------------------|------------|-------------|
+| **Mixture of Unigrams** | “1 topic per doc.” | Simple math | Unrealistic for multi‑theme docs |
+| **pLSI (probabilistic LSI — pick a topic for every word)** | Allows word‑level topic switches | Captures mixed docs | No true generative doc model → can’t score new docs |
+| **LDA (Latent Dirichlet Allocation)** | Full generative story for corpora | Handles unseen docs, Bayesian elegance | Needs approximate inference |
+
+
+### 4.4 LDA’s Generative Story
+1. Draw **topic mixture** for the document: $\theta \sim \text{Dir}(\alpha)$.  
 2. For each word *n* (total *N*):  
-   a. Pick topic \(z_n \sim \text{Mult}(\theta)\).  
-   b. Emit word \(w_n \sim p(w\mid z_n, \beta)\).
+   a. Pick topic $z_n \sim \text{Mult}(\theta)$.  
+   b. Emit word $w_n \sim p(w\mid z_n, \beta)$.
 
 The Dirichlet prior allows reuse of topics within a document and scoring of unseen docs.
 
-### 4.2 Why LDA Beats Pure Clustering
+### 4.5 Why LDA Beats Pure Clustering
 * Soft, interpretable “topic–word” distributions.  
 * Documents receive **fingerprints** (topic proportions) rather than hard labels.  
 * Extensible (Correlated, Dynamic, Hierarchical LDA).
 
 ---
 
-<a name="inference--hyperparameter-tuning"></a>
 ## 5. Inference & Hyperparameter Tuning
 
 | Goal | Common Approach | Notes |
 |------|-----------------|-------|
 | Estimate hidden vars | **Variational EM** | Fast, deterministic, default in *gensim*. |
 | Better accuracy | **Collapsed Gibbs sampling** | Slower but simple math. |
-| Optimise \(\alpha, \eta\) | **Empirical Bayes** | Re‑estimate every few EM iterations. |
+| Optimise \$alpha, \eta$ | **Empirical Bayes** | Re‑estimate every few EM iterations. |
 
 ---
 
-<a name="minimal-python-pipeline"></a>
 ## 6. Minimal Python Pipeline
 
 ```python
@@ -129,7 +122,6 @@ pyldavis_html = gensimvis.prepare(lda, corpus, id2word)
 
 ---
 
-<a name="tool-selection-quick-guide"></a>
 ## 7. Tool Selection Quick Guide
 
 | Use‑case | Pick |
@@ -140,7 +132,6 @@ pyldavis_html = gensimvis.prepare(lda, corpus, id2word)
 
 ---
 
-<a name="common-pitfalls--remedies"></a>
 ## 8. Common Pitfalls & Remedies
 
 | Pitfall | Symptom | Remedy |
@@ -152,11 +143,12 @@ pyldavis_html = gensimvis.prepare(lda, corpus, id2word)
 
 ---
 
-<a name="20-second-takeaway"></a>
-## 9. 20‑Second Takeaway
-**K‑means** gives crisp buckets; **LDA** gives soft thematic fingerprints.  
-Pick *K* with elbow/coherence, measure quality with **homogeneity + completeness**, and visualise topics early to keep both the model and your audience sane.
-
----
-
-*Prepared May 10, 2025*
+## 9. Further evaluation metrics
+| Metric | Measures | Watch‑Out |
+| --- | --- | --- |
+| **Purity** | % of docs whose majority class matches their cluster. | Inflated by many tiny clusters. |
+| **Rand Index** | Pairwise agreement. | Sensitive to imbalance. |
+| **F‑measure** | Harmonic mean of P & R. | Needs class weights. |
+| **NMI** | Mutual information between clusters & labels. | 0 – 1 scale. |
+| **V‑measure** | Harmonic mean of Homogeneity & Completeness. | Robust to cluster count. |
+| **Topic Coherence** | Semantic relatedness of top words. | Needs a reference corpus (usually). |
