--- a/notes/Intelligent-interactive-systems/08. Probabilistic Reasoning and MDP.md
+++ b/notes/Intelligent-interactive-systems/08. Probabilistic Reasoning and MDP.md
@@ -1,30 +1,21 @@
-
 # Probabilistic Reasoning & Markov Decision Processes  
 
 > *“Good decisions flow from clear probabilities and long‑term thinking.”*  
 
----
+Modern AI systems—and the humans who use them—must make good choices in the face of uncertainty. Two fundamental toolkits help:
+- Bayesian reasoning — using evidence to update beliefs about how likely something is.
+- Markov Decision Processes (MDPs) — formal road-maps for picking actions over time when results depend on both choice and chance.
 
-## 1  |  Roadmap  
-**You will learn** how to  
-1. update beliefs with **Bayes’ theorem**,  
-2. plan sequential actions with **Markov Decision Processes (MDPs)**, and  
-3. avoid the cognitive & statistical traps that derail both humans and AIs.  
+## 1.  Bayes Made Intuitive  
 
----
-
-## 2  |  Bayes Made Intuitive  
-
-### 2.1  The theorem in plain English  
+### 1.1  The theorem in plain English  
 > **Posterior = (Evidence if theory true × Base rate) ÷ Overall evidence.**
 
 Mathematically  
 
-\\[
-P(H\\mid E)=\\frac{{P(E\\mid H)\\,P(H)}}{{P(E)}}
-\\]
+$$P(H\\mid E)=\\frac{{P(E\\mid H)\\,P(H)}}{{P(E)}}$$
 
-### 2.2  Worked example using natural frequencies  
+### 1.2  Worked example using natural frequencies  
 | People (out of 1 000) | Test outcome | Disease Q status | Count |
 |-----------------------|--------------|------------------|-------|
 | Have Q                | **Positive** | Diseased         | 9     |
@@ -33,33 +24,33 @@ P(H\\mid E)=\\frac{{P(E\\mid H)\\,P(H)}}{{P(E)}}
 | Healthy               | Negative     | Healthy          | 901   |
 
 Only **9 of the 98 positives** actually have the disease → probability ≈ **9 %**.  
-Most novices guess 81 % because they mix up sensitivity with the answer citeturn3file0.
+Most novices guess 81 % because they mix up sensitivity with the answer.
 
-### 2.3  Why natural frequencies beat percentages  
-Natural counts keep base rates visible and dodge denominator neglect, a prime cause of “statistical illiteracy” in medicine citeturn3file18.
+### 1.3  Why natural frequencies beat percentages  
+Natural counts keep base rates visible and dodge denominator neglect, a prime cause of “statistical illiteracy” in medicine.
 
 ---
 
-## 3  |  Markov Foundations  
+## 2.  Markov Foundations  
 
-### 3.1  Markov Chain recap  
+### 2.1  Markov Chain recap  
 Tomorrow depends only on **today** (memory‑less).  
 
-### 3.2  Anatomy of an MDP  
+### 2.2  Anatomy of an MDP  
 | Symbol | Meaning | Plain English |
 |--------|---------|---------------|
-| \\(S\\) | States | Situations an agent can be in |
-| \\(A\\) | Actions | Choices available |
-| \\(P(s'\\mid s,a)\\) | Transition | Chance the action lands you in state \\(s'\\) |
-| \\(R(s,a)\\) | Reward | Immediate payoff for taking \\(a\\) in \\(s\\) |
-| \\(\\gamma\\) | **Discount factor** | How much tomorrow counts vs today (0 = myopic, 1 = far‑sighted) |
-| \\(\\pi\\) | Policy | Rule mapping each state to an action |
+| \$S\$ | States | Situations an agent can be in |
+| \$A\$ | Actions | Choices available |
+| \$P(s'\\mid s,a$\) | Transition | Chance the action lands you in state \$s'\$ |
+| \$R(s,a)\$ | Reward | Immediate payoff for taking \$a\$ in \$s\$ |
+| \$\\gamma\$ | **Discount factor** | How much tomorrow counts vs today (0 = myopic, 1 = far‑sighted) |
+| \$\\pi\$ | Policy | Rule mapping each state to an action |
 
-Finite‑ vs infinite‑**horizon** MDPs simply decide whether the game eventually ends or repeats forever citeturn3file1.
+Finite‑ vs infinite‑**horizon** MDPs simply decide whether the game eventually ends or repeats forever.
 
 ---
 
-## 4  |  A Mini‑MDP Walk‑Through – The Headache Dilemma  
+## 3.  A Mini‑MDP Walk‑Through – The Headache Dilemma  
 
 | State | Action | → State | Probability | Reward |
 |-------|--------|---------|-------------|--------|
@@ -69,23 +60,23 @@ Finite‑ vs infinite‑**horizon** MDPs simply decide whether the game eventual
 | Headache | Wait      | Headache   | 0.8 | –1 |
 | No‑headache | — (similar probabilities omitted for brevity) | | |
 
-1. **Initial values** \\(V_0(s)=0\\).  
+1. **Initial values** \$V_0(s)=0\$.  
 2. **First sweep (γ = 0.9).**
 
-\\[
-V_1(\text{Headache}) = \max\left\{
-\begin{aligned}
-&0.7(1)+0.3(-1) = 0.4 &&[\text{Take pill}]\\\\
-&0.2(-1)+0.8(-1) = -1 &&[\text{Wait}]
-\end{aligned}
-\right\}
-\\]
+$$
+V_1(\text{Headache}) =
+\max \begin{cases}
+0.7(1)+0.3(-1)=0.4 & \text{(take pill)}\\
+0.2(-1)+0.8(-1)=-1 & \text{(wait)}
+\end{cases}
+$$
 
-So \\(V_1(\text{Headache})=0.4\\); further sweeps converge to the optimal **policy** “take pill if headache” citeturn3file1.
+
+So \$V_1(\text{Headache})=0.4\$; further sweeps converge to the optimal **policy** “take pill if headache”.
 
 ---
 
-## 5  |  How to Solve an MDP – Cheat‑Sheet  
+## 4.  How to Solve an MDP – Cheat‑Sheet  
 
 ```text
 # Value Iteration
@@ -114,43 +105,43 @@ loop
     if policy_stable: break
 ```
 
-Other options: **Q‑learning** (learn \\(Q(s,a)\\) from samples) and **PPO** (gradient ascent on neural‑net policies) for huge, unknown state spaces citeturn3file2.
+Other options: **Q‑learning** (learn \$Q(s,a)\$ from samples) and **PPO** (gradient ascent on neural‑net policies) for huge, unknown state spaces.
 
 ---
 
-## 6  |  Where MDPs Shine in the Real World  
+## 5.  Where MDPs Shine in the Real World  
 
 *Healthcare*  
 - Liver‑donor accept/reject timing  
 - Diabetes medication schedules  
 - Statin therapy onset  
 - Breast‑cancer screening intervals  
-- Epidemic control plans citeturn3file7  
+- Epidemic control plans
 
 *Other domains*  
 - Drug‑infusion pumps  
 - Medical needle steering  
-- Pilots’ eye‑scan patterns for situation awareness citeturn3file13  
+- Pilots’ eye‑scan patterns for situation awareness
 
 ---
 
-## 7  |  Partial Observability in Medicine  
+## 6.  Partial Observability in Medicine  
 
 Doctors never see the true patient state directly; they reason over **belief states** (probability distributions).  
-A **POMDP** extends an MDP with observation probabilities and belief‑state updates, enabling robust plans under hidden information citeturn3file14.
+A **POMDP** extends an MDP with observation probabilities and belief‑state updates, enabling robust plans under hidden information.
 
 ---
 
-## 8  |  Utility Metrics that Matter  
+## 7.  Utility Metrics that Matter  
 
 | Metric | What it measures | Used in |
 |--------|------------------|---------|
-| **QALY** | Quality‑adjusted life‑years gained | Transplants, chronic therapy citeturn3file7 |
-| **CPUC** | \$ per unit of health improvement | AI treatment planners; cut from \$497 to \$189 in simulation citeturn3file11 |
+| **QALY** | Quality‑adjusted life‑years gained | Transplants, chronic therapy |
+| **CPUC** | \$ per unit of health improvement | AI treatment planners; cut from \$497 to \$189 in simulation |
 
 ---
 
-## 9  |  Stat‑Literacy Corner – Say Risks Clearly  
+## 8.  Stat‑Literacy Corner – Say Risks Clearly  
 
 | **Old framing** | **Transparent framing** |
 |-----------------|-------------------------|
@@ -159,11 +150,11 @@ A **POMDP** extends an MDP with observation probabilities and belief‑state upd
 | Conditional %s | Natural counts (e.g., 9 of 1 000) |
 | Benefits in relative terms, harms in absolute | Show both sides in the **same units** |
 
-These fixes stop manipulative hype and empower shared decisions citeturn3file19.
+These fixes stop manipulative hype and empower shared decisions.
 
 ---
 
-## 10  |  Take‑Home Checklist  
+## 9.  Take‑Home Checklist  
 
 - [x] Turn percentages into **counts** before doing Bayes.  
 - [x] Remember **γ**—tomorrow matters!  
@@ -173,17 +164,13 @@ These fixes stop manipulative hype and empower shared decisions citeturn3f
 
 ---
 
-## 11  |  Glossary  
+## 10.  Glossary  
 
 | Term | Quick meaning |
 |------|---------------|
 | Natural frequency | Count out of a fixed population (e.g., 9/1 000) |
-| \\(γ\\) | Discount factor (0–1) |
+| \$γ\$ | Discount factor (0–1) |
 | Policy (π) | Decision rule mapping states → actions |
 | Belief state | Probabilistic guess of the hidden true state |
 | QALY | Quality‑adjusted life‑year |
 | CPUC | Cost per unit change |
-
----
-
-*Last updated: 2025-05-11*
