Update 08. Probabilistic Reasoning and MDP.md

--- a/notes/Intelligent-interactive-systems/08. Probabilistic Reasoning and MDP.md
+++ b/notes/Intelligent-interactive-systems/08. Probabilistic Reasoning and MDP.md
@@ -24,19 +24,30 @@ $$P(H\\mid E)=\\frac{{P(E\\mid H)\\,P(H)}}{{P(E)}}$$
 | Healthy               | Negative     | Healthy          | 901   |
 
 Only **9 of the 98 positives** actually have the disease → probability ≈ **9 %**.  
-Most novices guess 81 % because they mix up sensitivity with the answer.
 
 ### 1.3  Why natural frequencies beat percentages  
 Natural counts keep base rates visible and dodge denominator neglect, a prime cause of “statistical illiteracy” in medicine.
+
+Present numbers as simple counts (“9 out of 10”) instead of tricky percentages. Humans then answer Bayes problems far better. 
+
+| **Statistic Style** | **Example for Disease Q** | **Cognitive Load** |
+|---------------------|---------------------------|--------------------|
+| Conditional %       | “Sensitivity = 90 %, False-positive = 9 %” | High |
+| Natural frequency   | “Out of 1,000 people, 10 have Q; 9 of them test positive; 89 healthy people also test positive.” | Low |
+
 
 ---
 
 ## 2.  Markov Foundations  
 
 ### 2.1  Markov Chain recap  
-Tomorrow depends only on **today** (memory‑less).  
+**Markov chain** — a sequence where tomorrow’s state depends only on today, not yesterday. Think weather: if it’s rainy today there’s a fixed chance it stays rainy tomorrow. 
 
-### 2.2  Anatomy of an MDP  
+### 2.2 Markov Decision Process (MDP) — *A Markov chain with choices*  
+**MDP** — a Markov chain plus *actions* and *rewards* so an “agent” can seek long-term gain. Plainly: a game board where each move changes both your position and your score.
+
+
+### 2.3  Anatomy of an MDP  
 | Symbol | Meaning | Plain English |
 |--------|---------|---------------|
 | \$S\$ | States | Situations an agent can be in |
@@ -51,6 +62,8 @@ Finite‑ vs infinite‑**horizon** MDPs simply decide whether the game eventual
 ---
 
 ## 3.  A Mini‑MDP Walk‑Through – The Headache Dilemma  
+<img src="../../images/mdp.PNG" alt="mdp" width="400">
+
 
 | State | Action | → State | Probability | Reward |
 |-------|--------|---------|-------------|--------|
@@ -74,12 +87,32 @@ $$
 
 So \$V_1(\text{Headache})=0.4\$; further sweeps converge to the optimal **policy** “take pill if headache”.
 
+
+### 3.1 Bellman Equation — *Value in two parts*  
+**Bellman value** \$V^\* (s)\$ — best long-run reward you can still earn from state \$s\$:     
+
+$$V^\*(s)=\max_{a\in A}\Big( R(s,a)+\gamma\sum_{s'}P(s'\mid s,a)\,V^\*(s') \Big)$$      
+
+Plain English: Pick the action whose *immediate* reward plus the *discounted* future goodies is largest. 
+
 ---
 
 ## 4.  How to Solve an MDP – Cheat‑Sheet  
 
+### 4.1 Algorithms Commonly Used to Solve an MDP
+
+- **Value Iteration** – sweep state-values until they converge.  
+- **Policy Iteration** – alternate between policy evaluation and improvement.  
+- **Q-Learning** – learn action-values directly from experience (model-free).  
+- **Reinforcement Learning (RL)** – umbrella term for trial-and-error learning with rewards.  
+- **Deep Reinforcement Learning (DRL)** – pair RL with deep neural networks for high-dimensional inputs.  
+- **Proximal Policy Optimisation (PPO)** – stable, clipped-update DRL algorithm that works well out-of-the-box.  
+- **…etc.**
+
+### 4.2  Value Iteration Algorithm
 ```text
 # Value Iteration
+Inputs: a MDP with state S, action A(s), transition model P(s'|s, a), rewards R(s), discount γ
 repeat
     Δ ← 0
     for each state s:
@@ -90,58 +123,20 @@ until Δ < ε
 π(s) ← argmax_a Σ_{s'} P(s'|s,a)[ R(s,a) + γ V[s'] ]
 ```
 
-```text
-# Policy Iteration
-initialize π arbitrarily
-loop
-    # Policy Evaluation
-    solve V^π from linear equations
-    # Policy Improvement
-    policy_stable ← true
-    for each state s:
-        old ← π(s)
-        π(s) ← argmax_a Σ_{s'} P(s'|s,a)[ R(s,a) + γ V^π[s'] ]
-        if old ≠ π(s): policy_stable ← false
-    if policy_stable: break
-```
+---
 
-Other options: **Q‑learning** (learn \$Q(s,a)\$ from samples) and **PPO** (gradient ascent on neural‑net policies) for huge, unknown state spaces.
+## 5.  Partial Observability in Medicine  
+
+Researchers built MDPs to choose when to start statin therapy, accept a liver donation, or adjust diabetes meds so lifetime quality (measured in Quality-Adjusted Life Years, QALY) is maximized.
+
+Partially Observable MDP (POMDP) — like an MDP but you can’t see the true state; you hold a belief state (probability distribution) instead.
+
+A 2013 framework embedded MDP/POMDP logic into a multi-agent system that simulates physicians and patients, optimizing a utility called Cost Per Unit Change (CPUC): money spent to improve one unit of health.Results beat treatment-as-usual.
+
 
 ---
 
-## 5.  Where MDPs Shine in the Real World  
-
-*Healthcare*  
-- Liver‑donor accept/reject timing  
-- Diabetes medication schedules  
-- Statin therapy onset  
-- Breast‑cancer screening intervals  
-- Epidemic control plans
-
-*Other domains*  
-- Drug‑infusion pumps  
-- Medical needle steering  
-- Pilots’ eye‑scan patterns for situation awareness
-
----
-
-## 6.  Partial Observability in Medicine  
-
-Doctors never see the true patient state directly; they reason over **belief states** (probability distributions).  
-A **POMDP** extends an MDP with observation probabilities and belief‑state updates, enabling robust plans under hidden information.
-
----
-
-## 7.  Utility Metrics that Matter  
-
-| Metric | What it measures | Used in |
-|--------|------------------|---------|
-| **QALY** | Quality‑adjusted life‑years gained | Transplants, chronic therapy |
-| **CPUC** | \$ per unit of health improvement | AI treatment planners; cut from \$497 to \$189 in simulation |
-
----
-
-## 8.  Stat‑Literacy Corner – Say Risks Clearly  
+## 6.  Stat‑Literacy Corner – Say Risks Clearly  
 
 | **Old framing** | **Transparent framing** |
 |-----------------|-------------------------|
@@ -154,17 +149,7 @@ These fixes stop manipulative hype and empower shared decisions.
 
 ---
 
-## 9.  Take‑Home Checklist  
-
-- [x] Turn percentages into **counts** before doing Bayes.  
-- [x] Remember **γ**—tomorrow matters!  
-- [x] Use **value or policy iteration** for small models; **RL** for big, unknown ones.  
-- [x] Map your problem’s rewards to **QALY, CPUC, or dollars**.  
-- [x] Communicate risks with **absolute numbers**, not headline percentages.  
-
----
-
-## 10.  Glossary  
+## 7.  Glossary  
 
 | Term | Quick meaning |
 |------|---------------|
@@ -172,5 +157,3 @@ These fixes stop manipulative hype and empower shared decisions.
 | \$γ\$ | Discount factor (0–1) |
 | Policy (π) | Decision rule mapping states → actions |
 | Belief state | Probabilistic guess of the hidden true state |
-| QALY | Quality‑adjusted life‑year |
-| CPUC | Cost per unit change |
