Update 06-10. Graph & Network Analysis — Exam Cheat-Sheet.md

--- a/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
+++ b/notes/Intelligent-data-analysis/06-10. Graph & Network Analysis — Exam Cheat-Sheet.md
@@ -1,8 +1,7 @@
-# Network Analysis & Graph Theory – Memorisation Cheat‑Sheet
+# Network Analysis & Graph Theory
+<img src="https://cdn.analyticsvidhya.com/wp-content/uploads/2018/03/Graph-Theory.jpg" alt="Network" width="400">
 
-## Graph Theory Foundations
-
-– Network Analysis & Graph Theory (Introduction)
+## 1. Graph Theory Foundations
 
 ### Core definitions
 - **Graph**: An ordered pair $G = (V, E)$ where
@@ -23,17 +22,17 @@
   $G = (V, E)$ with $E \subseteq V \times V$ ordered pairs
 
 ### Adjacency
-- Vertices $v_i, v_j$ are **adjacent** (neighbours) if $(v_i, v_j) \in E$
+- Vertices $v_i, v_j$ are **adjacent** (neighbours) if $(v_i, v_j) \in E$ (There is an edge connecting them)
 - Edge $(v_i, v_j)$ is **incident** on $v_i$ and $v_j$
 - **Adjacency matrix** $A_G$: $|V| \times |V|$ square matrix where
 
-  $$
-  A_G(v_i, v_j) =
-    \begin{cases}
-      1 & \text{if } (v_i, v_j) \in E \\
-      0 & \text{otherwise}
-    \end{cases}
-  $$
+$$
+A_G(v_i, v_j) =
+  \begin{cases}
+    1 & \text{if } (v_i, v_j) \in E \\
+    0 & \text{otherwise}
+  \end{cases}
+$$
 
   - For **undirected** graphs $A_G$ is **symmetric**
 
@@ -53,7 +52,7 @@
 - By topology: **planar**, **tree** (incl. **star**), etc.
 - By degree/edge distribution: **random**, **small‑world**, **power‑law**, **scale‑free**
 
-### Typical analysis problems (know the names)
+### Typical analysis problems
 - **Centrality analysis** – find important nodes/edges (influence, resilience)
 - **Community detection** – identify groups/communities (source tracing, social cohesion)
 - **Positional analysis** – detect structurally equivalent roles
@@ -61,24 +60,19 @@
 - **Outlier analysis** – anomaly detection, classification
 - **Economic/path analysis** – shortest paths, cost optimisation
 
-### Classical origin story
-- Euler’s solution to the **Seven Bridges of Königsberg** (1736) marks the birth of graph theory; proved no walk crosses each bridge exactly once
-
 ---
 
----
-
-
-## Centrality Analysis
-
-– Centrality Analysis (Local Measures)
+## 2a. Centrality Analysis (Local Measures)
+<img src="https://dist.neo4j.com/wp-content/uploads/20201125204238/image-12-3.png" alt="Centrality Analysis" width="400">
 
 ### Centrality analysis
 - **Centrality analysis**: identifies the most **prominent nodes or edges** in a network according to a chosen importance metric (influence, resilience, popularity, etc.).
 - Centrality **is not about the physical location** of a node; graphs have no intrinsic spatial coordinates.
-- Node‑focused in this session, but many measures have **edge‑centrality** analogues.
+- We focus on nodes, but many measures have **edge‑centrality** analogues.
 
-### Degree centrality
+### 1- Degree centrality
+<img src="../../images/degree.png" alt="degree" width="200">
+
 - **Node degree**: number of edges incident on a vertex $v$; denoted $\deg(v)$.
 - **Degree centrality**: importance score proportional to $\deg(v)$. Simple but sensitive to:
   1. **Network density** – compare degree to others, not absolute number.
@@ -86,26 +80,30 @@
   3. **Edge weights** – replace count with **strength** $s(v)=\sum_j w_{ij}$.
   4. **Multiplicity** – in multigraphs, choose to (a) dichotomise or (b) treat multiplicity as weight.
 
+Remember that:
 - A **weighted graph** $G_W=(V,E,W)$ assigns a real value $w(e)$ to every edge; negative weights allowed.
 
 - A **multigraph** $G=(V,E)$ allows **multiple edges (parallel edges)** between a pair of vertices; a simple graph forbids them.
 
-### Betweenness centrality
+### 2- Betweenness centrality
+<img src="../../images/betweenness.png" alt="betweenness" width="200">
+
 - Idea: a node is central if **many shortest‑path flows pass through it**.
 - **Shortest path (geodesic)**: path with minimum edge count (or minimum weight in weighted graphs). Multiple shortest paths may exist.
 - **Freeman’s betweenness centrality** for node $v_k$:
-  $$
-  g(v_k)=\sum_{v_i
+  
+$$
+g(v_k)=\sum_{v_i
 eq v_k}\sum_{v_j
 eq v_k} 
 rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
-  $$
+$$    
+
   where $\sigma(v_i,v_j)$ is the number of shortest paths between $v_i$ and $v_j$ and $\sigma(v_i,v_j\mid v_k)$ is those that pass through $v_k$.
   - If $v_i=v_j$: $\sigma(v_i,v_j)=1$
   - If $v_k$ is an endpoint: $\sigma(v_i,v_j\mid v_k)=0$
-- Efficient computation: **Brandes algorithms** (2001, 2008).
 
-### Path & chain terminology (must recognise)
+### Path & chain terminology
 | Type | Vertices can repeat? | Edges can repeat? | Open/Closed | Directed? |
 |------|----------------------|-------------------|-------------|-----------|
 | **Walk** | ✓ | ✓ | Either | Either |
@@ -118,9 +116,11 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
 
 ---
 
-– Centrality Analysis: Global Measures
+## 2b. Centrality Analysis (Global Measures)
 
-### Closeness Centrality
+### 3- Closeness Centrality
+<img src="../../images/closeness.png" alt="Closeness" width="200">
+
 - **Idea**: A node is more central when it is, on average, closer (shortest‐path distance) to every other node, giving a truly *global* importance measure.
 - **Unnormalised**: $CC(v_i)=\displaystyle\frac{1}{\sum_{v_j\in V} d(v_i,v_j)}$
 - **Normalised** (common): $CC(v_i)=\displaystyle\frac{|V|-1}{\sum_{v_j\in V} d(v_i,v_j)}$
@@ -128,24 +128,30 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
   - Works with any distance metric (e.g., hop count, Dijkstra on weighted/directed graphs).
   - In disconnected graphs, treat unreachable distances as ∞ and set $1/\infty=0$ (Beauchamp correction).
 
-### Eigenvector Centrality (Eigencentrality)
+### 4- Eigenvector Centrality (Eigencentrality)
+<img src="../../images/Eigencentrality.png" alt="Eigencentrality" width="200">
+
 - **Intuition**: “You’re important if you link to other important nodes.” Captures prestige beyond mere degree or betweenness.
 - **Definition**: Dominant eigenvector of the adjacency matrix **A**.
-  $$
-    x(v_i)=\frac{1}{\lambda}\sum_{j\in V} a_{ij}\,x(v_j)
-  $$
+  
+$$
+  x(v_i)=\frac{1}{\lambda}\sum_{j\in V} a_{ij}\,x(v_j)
+$$
+  
   where $\lambda$ is the largest eigenvalue.
 - **Computation**: Solve $A p = \lambda p$; use the components of the eigenvector with the largest $\lambda$.
 
-### PageRank
+### 4b- PageRank
 - **Concept**: A directed, damped variant of eigenvector centrality used in web ranking.
   - Influence is split equally among out‑links; being *linked *to* by high‑rank pages boosts your score.
   - Random‑surf damping prevents link‑farms (cyclotrons) and handles dangling pages.
 - **Transition matrix**: $A_{\text{norm}} = \text{diag}(A\mathbf{e})^{-1} A$ (rows divided by out‑degree).
 - **Iterative update** (damping factor $d\approx0.85$):
-  $$
-    p^{(t)} = d\,A_{\text{norm}}^{\!T}p^{(t-1)} + (1-d)\,\mathbf{e}
-  $$
+  
+$$
+  p^{(t)} = d\,A_{\text{norm}}^{\!T}p^{(t-1)} + (1-d)\,\mathbf{e}
+$$
+  
   where $\mathbf{e}$ is a personalization vector (often uniform).
 - **Edge cases**
   - *Cyclotron*: self‑link loops artificially inflate rank; damping mitigates.
@@ -153,18 +159,16 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
 
 ---
 
-
-## Community Detection
-
-– Community Detection (Foundations)
+## 3a. Community Detection (Foundations)
+<img src="https://timbr.ai/wp-content/uploads/2021/11/community.png-1024x303.jpg" alt="Community" width="400">
 
 ### Community concept
 - **Community (intuitive)**: subset of nodes with denser internal links than external ones.
 
-### Formal community definitions (Radicchi et al., 2004)
+### Formal community definitions
 - **Strong community**: subgraph $V_c$ where $\forall v\in V_c:\; \deg_{V_c}(v) > \deg_{\lnot V_c}(v)$.
 - **Weak community**: subgraph $V_c$ where $\sum_{v\in V_c} \deg_{V_c}(v) > \sum_{v\in V_c} \deg_{\lnot V_c}(v)$.
-  Every strong community is also weak, but not vice‑versa.
+    - Every strong community is also weak, but not vice‑versa.
 
 ### Connectivity groundwork
 - **Connected component (undirected)**: maximal subgraph in which any two vertices are joined by a path.
@@ -172,28 +176,34 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
 
 | Graph type | Definition | Key fact |
 |------------|------------|----------|
-| **Free graph** | Edge‑less graph ($E=\varnothing$) | $\omega(G)=|V|$ (each node isolated)  |
-| **Complete graph** $K_n$ | All vertex pairs adjacent | $|E|=n(n-1)/2$; diameter = 0 ($n\le1$) else 1  |
+| **Free graph** | Edge‑less graph ($E=\varnothing$) | $\omega(G)=\lvert V\rvert$ (each node isolated)  |
+| **Complete graph** $K_n$ | All vertex pairs adjacent | $\|E\| = n(n-1)/2$; diameter = 0 ($n\le1$) else 1  |
 
-- **Weakly connected digraph**: connected when arc directions are ignored.
-- **Strongly connected digraph**: directed path exists for every ordered vertex pair; strong ⇒ weak.
+- **Connected Graph vs. Complete Graph?**:
+    - A graph is connected if there is a path between every pair of vertices.
+    - A graph is complete if there is an edge directly connecting every pair of vertices.
+
+- **Connected directed graphs**:
+    - **Weakly connected digraph**: connected when arc directions are ignored.
+    - **Strongly connected digraph**: directed path exists for every ordered vertex pair; strong ⇒ weak.
 
 ### Vulnerability concepts
 - **Bridge / cut‑edge**: edge whose deletion increases the number of connected components, i.e. $\omega(G\setminus e) > \omega(G)$.
 - **Cut vertex / articulation point**: vertex whose deletion increases $\omega$.
 
 ### Regularity & special graph families
-- **k‑regular graph**: every vertex degree $k$; impossible when both $k$ and $|V|$ are odd.
-- **Bipartite graph**: vertices partitioned into $V_1,V_2$ with edges only across the partition.
+- **k‑regular graph**: every vertex degree is the same $k$ ; impossible when both $k$ and $|V|$ are odd.
+- **Bipartite graph**: vertices partitioned into $V_1,V_2$ with edges only across the partition. (Imagine a neural network)
 - **Complete bipartite graph** $K_{n,m}$: every $v\in V_1$ adjacent to every $v\in V_2$.
 - **Clique**: complete subgraph.
 
-### Traversal algorithms (know the names)
-- **Depth‑First Search (DFS)**
-- **Breadth‑First Search (BFS)**
-  Both enumerate connected components; Tarjan’s DFS variant yields strongly‑connected components in digraphs.
+### Traversal algorithms
+- **Depth‑First Search (DFS)**: Explores as far as possible along each branch before backtracking.
+- **Breadth‑First Search (BFS)**: Explores all neighbors level by level before moving deeper.
 
-– Community Detection: Trees, Modularity & Algorithms
+---
+
+## 3b. Community Detection (Trees, Modularity & Algorithms)
 
 ### Trees – must‑know facts
 - **Intuitive**: A tree is a graph where every two vertices are connected by exactly one simple path.
@@ -201,7 +211,6 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
 - Alternate characterisation (equivalent conditions):
   - Adding any missing edge creates exactly one cycle.
   - Removing any edge disconnects the graph.
-  - No $K_3$ minor; or any two vertices have a unique simple path.
 - **Degree terminology**:
   - $\deg(v) \ge 2$ ⇒ *internal* vertex
   - $\deg(v) = 1$ ⇒ *external* / *leaf*
@@ -209,49 +218,64 @@ rac{\sigma(v_i,v_j\mid v_k)}{\sigma(v_i,v_j)}
 - **Binary‑merge dendrogram**: a tree with $n$ leaves has $2n-1$ total nodes (important when reading community dendrograms).
 
 ### Modularity – quality of a partition
-- **Concept**: “Edges inside communities minus random expectation.”
-- **Newman–Girvan (unweighted)**
-  $$
-    Q = \sum_i (m_{ii} - m_i^{\,2})
-  $$
-  where $m_{ij}$ is the fraction of all edges linking community $i$ to $j$. Range $[-½,1)$; $Qpprox1$ ⇔ strong community structure, $Q=0$ ⇔ no better than random.
-- **Weighted/Directed generalisation**
-  $$
-    Q = 
-rac{1}{2m}\sum_{i,j}\Bigl(a_{ij} - 
-rac{k_i k_j}{2m}\Bigr)\delta(c_i,c_j)
-  $$
-  with $a_{ij}$ edge weight, $k_i$ weighted degree, $m=	frac12\sum a_{ij}$.
+- **Concept**:
+    - “How much denser are the edges *inside* the proposed communities than we would expect if we randomly rewired the same graph while keeping every node’s degree the same?”
+- **Why compare to random?**
+    - Simply counting intra-community edges is misleading—dense regions can appear just because some nodes have high degree.
+    - Modularity subtracts out that “baseline” density, so a high score means the partition reveals structure *beyond* what node degrees alone can explain.
 
-### Mapping communities → dendrogram
+- **Core formula (unweighted, Newman-Girvan):**  
+  $$Q = \sum_{i} \bigl( m_{ii} - m_i^{\,2} \bigr)$$  
+  where  
+  - $$m_{ii}$$ is the fraction of all edges whose **both** endpoints lie in community $$i$$, and  
+  - $$m_i = \sum_j m_{ij}$$ is the total edge fraction attached to community $$i$$.
+ 
+- **Interpretation of $$Q$$:**  
+  - $$Q \approx 1$$ → communities are very tight; far more internal edges than chance.  
+  - $$Q \approx 0$$ → edges look random with respect to the partition.  
+  - $$Q < 0$$ → edges cut across the partition more than expected, so the grouping is *anti-community*.  
+
+- **Typical range:** $$[-\tfrac12,\,1)$$.  The theoretical upper bound of $$1$$ is rarely reached in real data; values above $$0.3$$ – $$0.4$$ already indicate meaningful structure for many networks.
+
+### Algorithms used in (mapping communities → dendrogram) are either:
 - **Agglomerative**: start with isolated vertices; iteratively **add** edges/merge clusters (leaves → root).
 - **Divisive**: start with full graph; iteratively **remove** edges/split clusters (root → leaves).
 
-### Louvain algorithm (fast unfolding)
+### 1- Louvain algorithm (fast unfolding)
+<img src="https://miro.medium.com/v2/resize:fit:1400/1*iXJYk4DOM7JQ6o486kCIcg.png" alt="Louvain" width="400">
+
 1. **Phase 1** – locally move each node to the neighbour community that yields highest positive $\Delta Q$; repeat until no gain.
 2. **Phase 2** – collapse each community into a meta‑node, sum edge weights between them (self‑loops allowed).
 3. Re‑apply Phase 1 on the reduced graph; iterate until $Q$ saturates.
 **Pros**: scalable (≈ linear), reuses $\Delta Q$ updates.
 **Cons**: result depends on node order; may get stuck in local maxima.
 
-### Girvan–Newman algorithm
+### 2- Girvan–Newman algorithm
+<img src="https://miro.medium.com/v2/resize:fit:588/0*3_MOnmFqU3CfMhMn.png" alt="Girvan–Newman" width="400">
+
 1. Compute **edge betweenness centrality** for all edges.
 2. Remove edge(s) with highest betweenness.
 3. Recalculate betweenness on the residual graph.
 4. Repeat until no edges remain, recording component splits → produces top‑down dendrogram.
 Variants: remove all max‑betweenness edges at once (faster) or one at a time (easier to follow).
 
+---
 
-## Economic & Path Analysis
-
-– Economic Analysis, Eulerian & Hamiltonian Concepts
+## 4. Economic & Path Analysis
 
 ### Network economics
-- **Diameter** $D(G)$: longest shortest‑path distance between any two vertices.
-- **Cost** $K(G)=\displaystyle\sum_{v_i}\sum_{v_j\neq i} d(v_i,v_j)$.
-- **Global efficiency** $E_{glob}(G)=\frac{1}{|V|(|V|-1)}\sum_{v_i}\sum_{v_j\neq i}\frac{1}{d(v_i,v_j)}$.
-- **Economy** $Economy(G)=E_{glob}^{\text{norm}}(G)-K^{\text{norm}}(G)$.
-- Cognitive burden ≈ inverse of network economy: high cost → high burden.
+- **Diameter $D(G)$** – longest shortest-path in the graph; the farthest any two nodes are “hops” apart.  
+- **Cost $K(G)$** – total pairwise distance
+    - $K(G)=\displaystyle\sum_{v_i}\sum_{v_j\neq i} d(v_i,v_j)$
+    - Lower $$K$$ ⇒ cheaper network to traverse.
+- **Global efficiency ($E_{\text{glob}}$)** – average inverse distance
+    - $E_{glob}(G)=\frac{1}{|V|(|V|-1)}\sum_{v_i}\sum_{v_j\neq i}\frac{1}{d(v_i,v_j)}$
+    - Higher $$E_{\text{glob}}$$ ⇒ information flows faster overall.
+- **Economy** – efficiency minus cost (both normalised)
+    - $Economy(G)=E_{glob}^{\text{norm}}(G)-K^{\text{norm}}(G)$
+    - Positive ⇒ sleek & cheap; negative ⇒ sluggish & pricey.
+- **Cognitive burden** ≈ the inverse of economy: high cost + low efficiency means more mental effort to navigate the network.
+
 
 ### Shortest‑path algorithms (remember when to use which)
 
@@ -260,8 +284,6 @@ Variants: remove all max‑betweenness edges at once (faster) or one at a time (
 | **Dijkstra** | No | Single‑source | $O(E\log V)$ | Fast, non‑neg weights only.  |
 | **Floyd–Warshall** | Yes (no neg cycles) | All‑pairs | $O(V^3)$ | Simple triple loop.  |
 | **Bellman–Ford** | Yes | Single‑source | $O(VE)$ | Detects negative cycles.  |
-
-*$V=|V|,\;E=|E|$*
 
 ### Eulerian walks
 - **Eulerian path**: path using every edge exactly once.
@@ -278,5 +300,3 @@ Variants: remove all max‑betweenness edges at once (faster) or one at a time (
 - **Hamiltonian path**: visits every vertex exactly once.
 - **Hamiltonian cycle**: Hamiltonian path that ends at start.
 - **Hamiltonian graph**: contains a Hamiltonian cycle; deciding existence is NP‑complete.
-- Related problems: Travelling Salesman (cycle) and Hamiltonian path enumeration (exponential).
-
