Update 01. Nature of Data.md

--- a/notes/Intelligent-data-analysis/01. Nature of Data.md
+++ b/notes/Intelligent-data-analysis/01. Nature of Data.md
@@ -325,6 +325,8 @@ Dispersion metrics describe how spread out the data is:
 
     ```text
     Variance = [Σ (xᵢ - μ)²] / n
+
+    where μ is the mean and xᵢ are elements in the population.
     ```
 
 3. **Standard Deviation (SD)**: The square root of the variance.  
