Update 02. Basis and Coordinate Systems.md

--- a/notes/Intelligent-data-analysis/02. Basis and Coordinate Systems.md
+++ b/notes/Intelligent-data-analysis/02. Basis and Coordinate Systems.md
@@ -331,48 +331,16 @@ Where:
 <img src="https://numxl.com/wp-content/uploads/principal-component-analysis-pca-featured.png" alt="Wavelets" width="600">  
 
 **Definition**  
-PCA is a method that rotates the data to align with the directions of **maximum variance**. The process begins by centering the data:  
-```text
-X' = X - μ
-```
-Where `μ` is the mean of the data.
-
----
-
-#### **Procedure**
-1. **Center the Data**: Subtract the mean vector from the dataset.  
-   ```text
-   X' = X - μ
-   ```
-2. **Compute the Covariance Matrix**:  
-   ```text
-   Cov(X') = (X'X'^T) / (m - 1)
-   ```
-   Alternatively, normalize and decompose using:  
-   ```text
-   Cov(X') = H^T H
-   ```
-3. **Perform Eigen-Decomposition or SVD**: The principal components are the eigenvectors of the covariance matrix.  
-   Using SVD:  
-   ```text
-   H = U S V^T
-   ```
-This is an overview of the steps applied in PCA, but later on we shall dive deeper into how its done.
-   
----
+PCA is a method that rotates the data to align with the directions of **maximum variance**. 
 
 #### **Dimensionality Reduction**
 - PCA achieves dimensionality reduction by retaining only the principal components with the largest eigenvalues (those explaining the most variance).  
 - Eigenvectors corresponding to smaller eigenvalues (low variance) can be discarded.
 
----
-
 #### **Applications**
 - **Data Compression**: Reduce dimensionality while preserving most of the variance.  
 - **Denoising**: Filter noise by reconstructing data from the significant components.  
 - **Data Visualization**: Represent high-dimensional data in 2D or 3D.
-
----
 
 #### **Filtering in PCA/cMDS Space**
 - **Low-Pass Filter**: Set coefficients of eigenvectors with smaller eigenvalues to `0` and reconstruct.  
